Refactor daily log workflow for collapsible entries
Updated the cron schedule, changed the action version, and modified the daily log entry process to use a collapsible format. Also adjusted the README link update to reflect the new log file structure.

--- a/.github/workflows/daily-log.yml
+++ b/.github/workflows/daily-log.yml
@@ -2,7 +2,7 @@ name: Setup Daily Log Entry
 
 on:
   schedule:
-    - cron: '0 0 * * *'
+    - cron: '17 0 * * *'
   workflow_dispatch:
 
 permissions:
@@ -13,34 +13,42 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout code
-        uses: actions/checkout@v3
+        uses: actions/checkout@v4
 
-      - name: Insert Decorated Daily Date
+      - name: Insert Collapsible Daily Log and Update README
         run: |
-          # 1. 한국 시간 기준 날짜 및 요일 구하기
+          # 1. 한국 시간 기준 날짜 및 월 구하기
+          MONTH_PATH=$(date -u -d "+9 hours" "+%Y-%m")
           TODAY=$(date -u -d "+9 hours" "+%Y-%m-%d (%a)")
+          FILENAME="logs/daily-log-${MONTH_PATH}.md"
           
-          # 2. 파일이 없으면 초기 제목 생성
-          if [ ! -f daily-log.md ]; then
-            echo "# 🌳 My Daily Learning Log" > daily-log.md
-            echo -e "하루의 성장을 기록합니다.\n" >> daily-log.md
+          # 2. logs 폴더 생성
+          mkdir -p logs
+          
+          # 3. 월별 로그 파일 생성 (처음 한 번만)
+          if [ ! -f "$FILENAME" ]; then
+            echo "# 📅 $MONTH_PATH Learning Log" > "$FILENAME"
+            echo -e "이번 달의 성장을 기록합니다. 🌱\n" >> "$FILENAME"
           fi
 
-          # 3. 새로운 날짜 섹션 생성 (인용구 + 이모지 + 볼드체)
-          echo "> ### 🌱 **$TODAY**" > temp_entry.md
-          echo "- " >> temp_entry.md
-          echo -e "\n---" >> temp_entry.md
-          echo -e "\n" >> temp_entry.md
-          
-          # 4. 기존 내용을 새 섹션 뒤에 붙이기
-          cat daily-log.md >> temp_entry.md
-          mv temp_entry.md daily-log.md
+          # 4. 접이식(details) 구조로 오늘의 섹션을 파일 끝에 추가 (색상 제거 버전)
+          echo -e "\n<details>" >> "$FILENAME"
+          echo "<summary>🌱 <b>$TODAY</b></summary>" >> "$FILENAME"
+          echo -e "<div markdown=\"1\">\n<br>\n" >> "$FILENAME"
+          echo "- " >> "$FILENAME"
+          echo -e "\n</div>" >> "$FILENAME"
+          echo "</details>" >> "$FILENAME"
+
+          # 5. README.md 링크 업데이트
+          sed -i "s|\[📅 이번 달 로그 확인하기\](.*)|\[📅 이번 달 로그 확인하기\](./${FILENAME})|g" README.md
 
       - name: Commit and Push
         run: |
           git config --global user.name "kangsangmoon"
           git config --global user.email "sangmoonkang@naver.com"
-          git add daily-log.md
+          
+          git add logs/ README.md
+          
           TODAY=$(date -u -d "+9 hours" "+%Y-%m-%d (%a)")
-          git commit -m "chore: add daily log entry for $TODAY" || echo "No changes to commit"
+          git commit -m "chore: revert to clean style daily log for $TODAY" || echo "No changes to commit"
           git push
